--- a/app/src/main/res/layout/layout_update_infomation.xml
+++ b/app/src/main/res/layout/layout_update_infomation.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:padding="8dp"
     android:layout_width="match_parent"
@@ -12,7 +10,7 @@
         android:layout_height="wrap_content">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edt_name"
-            android:text="Your Name"
+            android:hint="Nhập Họ Tên"
             android:inputType="text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
@@ -24,7 +22,7 @@
         android:layout_height="wrap_content">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edt_adress"
-            android:text="Your Adress"
+            android:hint="Nhập địa chỉ"
             android:inputType="text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
@@ -36,10 +34,23 @@
         android:layout_height="wrap_content">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edt_phoneNumber"
-            android:text="Your Phone Number"
+            android:hint="Số Điện Thoại"
             android:inputType="phone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edt_email"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Email"
+            android:inputType="textEmailAddress" />
 
     </com.google.android.material.textfield.TextInputLayout>
     <Button
