--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#344955</color>
+    <color name="colorPrimaryDark">#232f34</color>
+    <color name="colorAccent">#F9AA33</color>
     <color name="colorButton">#373738</color>
-    <color name="colorBackground">#FDF9EE</color>
+    <color name="colorBackground">#EEFAFD</color>
     <color name="homeBackground">#DFDFDF</color>
 
     <color name="grey_100">#F5F5F5</color>
