--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,39 +12,41 @@
         android:id="@+id/layout_user_infomation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorButton"
+        android:background="@color/colorPrimaryDark"
         android:orientation="horizontal"
         android:padding="8dp"
         android:visibility="gone"
         android:weightSum="4">
 
         <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/ic_account_circle_white_24dp" />
 
         <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="8dp"
-            android:orientation="vertical">
+            android:weightSum="5">
 
             <TextView
+                android:layout_width="wrap_content"
                 android:id="@+id/txt_user_name"
-                android:layout_width="match_parent"
+                android:layout_weight="4"
                 android:layout_height="match_parent"
-                android:text="Bui Manh Hieu"
+                android:text="Manh Hieu"
                 android:textColor="@android:color/white"
                 android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/txt_member_type"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Boss"
-                android:textColor="@android:color/white"
-                android:textSize="16sp" />
+            <ImageView
+                android:id="@+id/btn_signout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/ic_signout"></ImageView>
+
         </LinearLayout>
 
     </LinearLayout>
@@ -59,7 +61,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="8dp"
-            android:weightSum="4">
+            android:weightSum="3">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_view_booking"
@@ -164,36 +166,36 @@
 
             </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_view_notification"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
-                android:layout_weight="1"
-                app:cardCornerRadius="8dp">
+            <!--            <androidx.cardview.widget.CardView-->
+            <!--                android:id="@+id/card_view_notification"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginRight="8dp"-->
+            <!--                android:layout_weight="1"-->
+            <!--                app:cardCornerRadius="8dp">-->
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+            <!--                <LinearLayout-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:orientation="vertical">-->
 
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_gravity="center_horizontal"
-                        android:src="@drawable/ic_notifications_black_24dp"></ImageView>
+            <!--                    <ImageView-->
+            <!--                        android:layout_width="50dp"-->
+            <!--                        android:layout_height="50dp"-->
+            <!--                        android:layout_gravity="center_horizontal"-->
+            <!--                        android:src="@drawable/ic_notifications_black_24dp"></ImageView>-->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:fontFamily="@font/bellerose"
-                        android:text="Notification"
-                        android:textSize="@dimen/textCardSize" />
-                </LinearLayout>
+            <!--                    <TextView-->
+            <!--                        android:layout_width="wrap_content"-->
+            <!--                        android:layout_height="wrap_content"-->
+            <!--                        android:layout_gravity="center_horizontal"-->
+            <!--                        android:fontFamily="@font/bellerose"-->
+            <!--                        android:text="Notification"-->
+            <!--                        android:textSize="@dimen/textCardSize" />-->
+            <!--                </LinearLayout>-->
 
 
-            </androidx.cardview.widget.CardView>
+            <!--            </androidx.cardview.widget.CardView>-->
 
 
         </LinearLayout>
@@ -228,8 +230,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
-                        android:fontFamily="@font/bellerose"
-                        android:text="Your Booking Infomation"
+                        android:text="Thông Tin Dịch Vụ"
                         android:textSize="18sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -288,23 +289,6 @@
                         android:textStyle="bold" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/bullet" />
-
-                    <TextView
-                        android:id="@+id/txt_time_remain"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text=" Time"
-                        android:textStyle="bold" />
-                </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
