--- a/app/src/main/res/layout/layout_update_infomation.xml
+++ b/app/src/main/res/layout/layout_update_infomation.xml
@@ -49,8 +49,7 @@
             android:id="@+id/edt_email"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Email"
-            android:inputType="textEmailAddress" />
+            android:hint="Email" />
 
     </com.google.android.material.textfield.TextInputLayout>
     <Button
